rtg_tests/negative/break_placement/go.mod
module example.com/rtgtests/negative/break_placement

go 1.25
